excercise 11.6 trello project adding css style

--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
     <meta charset="utf-8">
     <title>Kanban board</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    
+
 </head>
 <body>
 
 	<div id="board" class="board">
         <h1>Kanban board</h1>
-        <button class="create-column">Add a column</button>
+        <button class="create-column"></button>
         <div class="column-container"></div>
 	</div>
 
