--- a/index.html
+++ b/index.html
@@ -2,23 +2,28 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Kanban board</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Tablica kanban</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    
-
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 	<div id="board" class="board">
-        <h1>Kanban board</h1>
-        <button class="create-column"></button>
-        <div class="column-container"></div>
+	  <h1>Tablica kanban</h1>
+	  <button class="create-column"></button>
+	  <div class="column-container"></div>
 	</div>
 
     <script src="https://code.jquery.com/jquery-3.0.0.min.js" integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0=" crossorigin="anonymous"></script>
     <script   src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"   integrity="sha256-xNjb53/rY+WmG+4L6tTl9m6PpqknWZvRt0rO1SRnJzw="   crossorigin="anonymous"></script>
-    <script type="text/javascript" src="js/script.js"></script>
+    <!--TO JEST JUŻ NIE POTRZEBNE-->
+    <!--<script type="text/javascript" src="script.js"></script>-->
+    
+    <!--TERAZ UŻYWAMY TEGO-->
+    <script type="text/javascript" src="Column.js"></script>
+    <script type="text/javascript" src="Card.js"></script>
+    <script type="text/javascript" src="Board.js"></script>
+    <script type="text/javascript" src="App.js"></script>
 </body>
 </html>
